got rid of footer issue causing overlap on mobile view

--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -6,7 +6,7 @@
 
 body {
 	margin-top: 50px;
-	padding-bottom: 125px;
+  margin-bottom: 120px;
 	background: none;
 }
 
@@ -32,7 +32,7 @@ body {
 
 .maintitle{
 	color:white;
-	margin-top:13%;
+	margin-top:7%;
 	font-size:55px;
 }
 .maintitle2{
